package Enum;

public enum Suit {
    CUPS, SWORDS, GOLD, CLUBS;
}
